manifests/jellyfin/tailscaleingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-tailscale
  namespace: jellyfin
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - jellyfin
